// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client __call 1`] = `
Array [
  Array [
    "main",
    "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    "deploy",
    Array [],
    undefined,
  ],
]
`;

exports[`Client __invoke 1`] = `
Array [
  Array [
    "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    "deploy",
    Array [],
    Array [],
    true,
    undefined,
    Promise {},
  ],
]
`;

exports[`Client claim 1`] = `Array []`;

exports[`Client constructor automatically selects an account 1`] = `
Array [
  Array [
    Object {
      "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
      "network": "main",
    },
  ],
]
`;

exports[`Client constructor does not automatically select an account if one exists at the time of selection 1`] = `Array []`;

exports[`Client constructor throws on invalid provider key 1`] = `"Provider keys must be named the same as their type"`;

exports[`Client constructor throws on no provider 1`] = `"At least one provider is required"`;

exports[`Client deleteAccount 1`] = `
Array [
  Array [
    Object {
      "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
      "network": "main",
    },
  ],
]
`;

exports[`Client getAccount - throws on unknown account 1`] = `"Unknown account ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW"`;

exports[`Client issue - array 1`] = `
Array [
  Array [
    Array [
      Object {
        "amount": "10",
        "asset": "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
        "to": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      },
    ],
    Object {
      "attributes": Array [],
      "from": Object {
        "address": "AVf4UGKevVrMR1j3UkPsuoYKSC4ocoAkKx",
        "network": "main",
      },
      "monitor": undefined,
      "networkFee": undefined,
    },
  ],
]
`;

exports[`Client issue - simple 1`] = `
Array [
  Array [
    Array [
      Object {
        "amount": "10",
        "asset": "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
        "to": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      },
    ],
    undefined,
  ],
]
`;

exports[`Client publish 1`] = `
Array [
  Array [
    Object {
      "author": "dicarlo2",
      "codeVersion": "1.0",
      "description": "Hello World",
      "dynamicInvoke": false,
      "email": "alex.dicarlo@neotracker.io",
      "name": "MyContract",
      "parameters": Array [
        "Address",
        "Buffer",
      ],
      "payable": true,
      "returnType": "Buffer",
      "script": "5f8d70",
      "storage": true,
    },
    undefined,
  ],
]
`;

exports[`Client publishAndDeploy 1`] = `
Array [
  Array [
    Object {
      "author": "dicarlo2",
      "codeVersion": "1.0",
      "description": "Hello World",
      "dynamicInvoke": false,
      "email": "alex.dicarlo@neotracker.io",
      "name": "MyContract",
      "parameters": Array [
        "Address",
        "Buffer",
      ],
      "payable": true,
      "returnType": "Buffer",
      "script": "5f8d70",
      "storage": true,
    },
    Object {
      "events": Array [],
      "functions": Array [
        Object {
          "claim": undefined,
          "constant": undefined,
          "name": "deploy",
          "parameters": Array [],
          "receive": undefined,
          "returnType": Object {
            "optional": undefined,
            "type": "Boolean",
          },
          "send": undefined,
        },
      ],
    },
    Array [],
    undefined,
    Promise {},
  ],
]
`;

exports[`Client read - throws on unknown network 1`] = `"Unknown network unknown"`;

exports[`Client read 1`] = `
Array [
  Array [
    "main",
  ],
]
`;

exports[`Client read 2`] = `
ReadClient {
  "dataProvider": Object {},
}
`;

exports[`Client registerAsset 1`] = `
Array [
  Array [
    Object {
      "admin": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      "amount": "100000000",
      "issuer": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
      "name": "TheToken",
      "owner": "02028a99826edc0c97d18e22b6932373d908d323aa7f92656a77ec26e8861699ef",
      "precision": 8,
      "type": "Token",
    },
    undefined,
  ],
]
`;

exports[`Client selectAccount 1`] = `Array []`;

exports[`Client smartContract 1`] = `
Object {
  "balanceOf": [Function],
  "decimals": [Function],
  "definition": Object {
    "abi": Object {
      "events": Array [
        Object {
          "name": "transfer",
          "parameters": Array [
            Object {
              "default": undefined,
              "name": "from",
              "optional": true,
              "type": "Address",
            },
            Object {
              "default": undefined,
              "name": "to",
              "optional": true,
              "type": "Address",
            },
            Object {
              "decimals": 8,
              "default": undefined,
              "name": "amount",
              "optional": undefined,
              "type": "Integer",
            },
          ],
        },
      ],
      "functions": Array [
        Object {
          "claim": undefined,
          "constant": true,
          "name": "name",
          "parameters": Array [],
          "receive": undefined,
          "returnType": Object {
            "optional": undefined,
            "type": "String",
          },
          "send": undefined,
        },
        Object {
          "claim": undefined,
          "constant": true,
          "name": "symbol",
          "parameters": Array [],
          "receive": undefined,
          "returnType": Object {
            "optional": undefined,
            "type": "String",
          },
          "send": undefined,
        },
        Object {
          "claim": undefined,
          "constant": true,
          "name": "decimals",
          "parameters": Array [],
          "receive": undefined,
          "returnType": Object {
            "decimals": 0,
            "optional": undefined,
            "type": "Integer",
          },
          "send": undefined,
        },
        Object {
          "claim": undefined,
          "constant": true,
          "name": "totalSupply",
          "parameters": Array [],
          "receive": undefined,
          "returnType": Object {
            "decimals": 8,
            "optional": undefined,
            "type": "Integer",
          },
          "send": undefined,
        },
        Object {
          "claim": undefined,
          "constant": undefined,
          "name": "transfer",
          "parameters": Array [
            Object {
              "default": undefined,
              "name": "from",
              "optional": undefined,
              "type": "Address",
            },
            Object {
              "default": undefined,
              "name": "to",
              "optional": undefined,
              "type": "Address",
            },
            Object {
              "decimals": 8,
              "default": undefined,
              "name": "value",
              "optional": undefined,
              "type": "Integer",
            },
          ],
          "receive": undefined,
          "returnType": Object {
            "optional": undefined,
            "type": "Boolean",
          },
          "send": undefined,
        },
        Object {
          "claim": undefined,
          "constant": true,
          "name": "balanceOf",
          "parameters": Array [
            Object {
              "default": undefined,
              "name": "account",
              "optional": undefined,
              "type": "Address",
            },
          ],
          "receive": undefined,
          "returnType": Object {
            "decimals": 8,
            "optional": undefined,
            "type": "Integer",
          },
          "send": undefined,
        },
      ],
    },
    "networks": Object {
      "main": Object {
        "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      },
    },
    "sourceMaps": undefined,
  },
  "name": [Function],
  "read": [Function],
  "symbol": [Function],
  "totalSupply": [Function],
  "transfer": [Function],
}
`;

exports[`Client transfer - array 1`] = `
Array [
  Array [
    Array [
      Object {
        "amount": "10",
        "asset": "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
        "to": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      },
    ],
    Object {
      "attributes": Array [],
      "from": Object {
        "address": "AVf4UGKevVrMR1j3UkPsuoYKSC4ocoAkKx",
        "network": "main",
      },
      "monitor": undefined,
      "networkFee": undefined,
    },
  ],
]
`;

exports[`Client transfer - simple 1`] = `
Array [
  Array [
    Array [
      Object {
        "amount": "10",
        "asset": "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
        "to": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
      },
    ],
    undefined,
  ],
]
`;

exports[`Client updateAccountName 1`] = `
Array [
  Array [
    Object {
      "id": Object {
        "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
        "network": "main",
      },
      "name": "newName",
    },
  ],
]
`;
